--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -33,3 +33,11 @@ h1{
 p{
     text-align: center;
 }
+.card {
+    text-align: center;
+}
+
+.footer {
+    font-family: 'Amatic SC', cursive;
+    
+}
