--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -36,6 +36,11 @@ p{
 .card {
     text-align: center;
 }
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
 
 footer {
     font-family: 'Amatic SC', cursive;
