--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -36,6 +36,7 @@ p{
 .card {
     text-align: center;
 }
+
 .card-img-top {
     width: 100%;
     height: 15vw;
@@ -59,4 +60,10 @@ footer {
 #tbtn {
     margin-left: 700px;
 }
-
+ #item-section {
+     color: rgb(104, 103, 103);
+     font-family: 'Amatic SC', cursive;
+ }
+ #fBtn {
+    margin-right: 700px;
+}
