--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,7 +10,15 @@ h1{
     font-family: 'Amatic SC', cursive;
 
 } */
-
+ul {
+    margin: 0;
+    padding: 0;
+ }
+ li{
+    float:left;
+    margin-right:10px;
+    position:relative;
+  }
 .jumbotron{
     /* background-color: rgb(223, 215, 204); */
     background-color: #c5a282f1;
