update apiroutes and add html

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,7 +25,10 @@ ul {
     box-shadow: 0 8px 6px -6px black;
     position: relative;
 }
-
+.btn-secondary {
+    text-decoration: none !important;
+    /*trying to remove text decoration from "Claim" button to make text easier to read*/
+}
 .btn{
     background-color: rgb(129, 114, 99);
     border: orange;
@@ -98,7 +101,15 @@ footer {
     margin-left: 70%;
 }
 
- #item-section {
+ #item-section, 
+ #christmas-items,
+ #valentines-items,
+ #easter-items,
+ #other-items,
+ #halloween-items,
+ #thanksgiving-items,
+ #fourthofjuly-items,
+ #birthday-items {
      color: rgb(104, 103, 103);
      font-family: 'Amatic SC', cursive;
  }
