--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -44,7 +44,10 @@ h1{
     animation-duration: 5s;
 }
 
-
+.col-lg-12 {
+    max-width: 75%;
+    margin: 0 auto;
+}
 
 p{
     text-align: center;
@@ -52,6 +55,7 @@ p{
 .card {
     text-align: center;
     margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 .card-img-top {
