--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -56,6 +56,7 @@ p{
     text-align: center;
     margin-bottom: 20px;
     margin-top: 10px;
+    font-family: 'Amatic SC', cursive;
 }
 
 .card-img-top {
